--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 
     <div class="weather-container">
         <p class="city"></p>
-        <p class="temp"></p>
-        <p class="feels"></p>
+        <p class="currentTemp"></p>
+        <p class="currentFeels"></p>
         <img class="icon">
         <p class="weather"></p>
         <br><br>
