--- a/index.html
+++ b/index.html
@@ -21,13 +21,31 @@
         <br><br>
     </div>
 
-    
-    
+
+
     <div id="forecast">
+        <div>
+            <ul id="one">
+            </ul>
+        </div>
+        <div>
+            <ul id="two">
+            </ul>
+        </div>
+        <div>
+            <ul id="three">
+            </ul>
+        </div>
+        <div>
+            <ul id="four">
+            </ul>
+        </div>
+        <div>
+            <ul id="five">
+            </ul>
+        </div>
         <ul id="fiveDay">
         </ul>
     </div>
     <script src="script.js"></script>
-</body>
-
-</html>
+</body></html>
