--- a/index.html
+++ b/index.html
@@ -24,28 +24,13 @@
 
 
     <div id="forecast">
-        <div>
-            <ul id="one">
-            </ul>
-        </div>
-        <div>
-            <ul id="two">
-            </ul>
-        </div>
-        <div>
-            <ul id="three">
-            </ul>
-        </div>
-        <div>
-            <ul id="four">
-            </ul>
-        </div>
-        <div>
-            <ul id="five">
-            </ul>
-        </div>
-        <ul id="fiveDay">
-        </ul>
     </div>
+
+    <div id="map">
+        <img src="https://tile.openweathermap.org/map/precipitation_new/2/2/2.png?appid=f299fe1664f7a29b0d3100ebe150b2a2">
+    </div>
+
     <script src="script.js"></script>
-</body></html>
+</body>
+
+</html>
