--- a/index.html
+++ b/index.html
@@ -7,9 +7,10 @@
 	<title>Weather App</title>
 	<link rel="stylesheet" href="style.css">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-	<script async defer
-src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCkUOdZ5y7hMm0yrcCQoCvLwzdM6M8s5qk&callback=initMap">
-</script>
+	<script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCzM3rxTmAkn_MQp3Yu0vEkUwg3uPVM6e0&callback=initMap">
+	</script>
+
+
 
 </head>
 
@@ -29,10 +30,8 @@ src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCkUOdZ5y7hMm0yrcCQoCvLwzd
 	<div id="forecast"><span id="map"></span></div>
 
 	
-    
-
 	
-	<script src="script.js"></script>
-</body>
 
-</html>
+
+	<script src="script.js"></script>
+</body></html>
